# groundmodel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
crates/groundmodel-cli/: Cargo.toml
crates/groundmodel-cli/src/: main.rs
crates/groundmodel-core/: Cargo.toml
crates/groundmodel-core/src/: agsi.rs  lib.rs  model.rs  schema.rs  validation.rs
crates/groundmodel-wasm/: Cargo.toml
crates/groundmodel-wasm/src/: lib.rs
examples/: worked-orchard.yaml
schema/: groundmodel-0.1.0.json
specs/: 001_initial.md  002_design.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css
