[workspace]
members = [
  "crates/groundmodel-core",
  "crates/groundmodel-cli",
  "crates/groundmodel-wasm",
  "bindings/python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
wasm-bindgen = "0.2"
wkt = "0.12"
